--- a/web/css/main.css
+++ b/web/css/main.css
@@ -31,12 +31,19 @@ body{
     background-color:khaki;
     color: white;
 }
+
+#list-recipes {
+    width: 100%;
+    height: auto;
+}
+
 .random-recipe{
     width: 100%;
     height: 200px;
 }
 
 .random-recipe li{
+    width: 17%;
     display: inline;
 }
 
@@ -63,8 +70,8 @@ body{
     padding-bottom: 100px;
 }
 
-.list-recipes-layout ul li {
-    width: 180px;
+.recipe-card {
+    width: 200px;
     float: left;
     padding: 10px;
     text-align: center;
@@ -155,8 +162,10 @@ body{
     width: 90%;
     list-style: none;
     height: 180px;
-    background-color: chocolate;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
+
+
 
 .recommend-recipe li img{
     height: 130px;
